# Argus

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md
hf_bundle_scanner/: Dockerfile  LICENSE  Makefile  NOTICE  README.md  pyproject.toml
hf_bundle_scanner/docs/: hermes-mcp.md
hf_bundle_scanner/hf_bundle_scanner/: __init__.py  __main__.py  cli.py  configlint.py  discovery.py  dispatch.py  dynamic_probe_report.py  http_job.py  mcp_server.py  orchestrator_job.py  provenance.py  report.py  snapshot.py  test_catalog.py  timestamps.py
hf_bundle_scanner/tests/: conftest.py  test_cli.py  test_configlint.py  test_configlint_policy_template.py  test_discovery.py  test_dispatch.py  test_dynamic_probe_report.py  test_http.py  test_integration_chwoo_collection.py  test_integration_snapshot.py  test_mcp_import.py  test_orchestrator_job.py  test_orchestrator_job_dynamic_probe_modes.py  test_provenance.py  test_report.py  test_rotate_readme_slogan.py  test_snapshot.py  test_test_catalog.py
hf_bundle_scanner/tests/fixtures/: garak.dynamic.stub.yaml  orchestrator_job_min.json  orchestrator_job_with_admit.json  orchestrator_job_with_dynamic.json  policy.permissive.json  policy.safetensors-only.json
model-admission/: .gitignore  Dockerfile  LICENSE  NOTICE  README.md  pyproject.toml  requirements-worker.txt
model-admission/.github/workflows/: ci.yml
model-admission/docs/: GOALS_AND_TEST_REPORT.md
model-admission/examples/: github-actions.yml  policy.example.json
model-admission/k8s/: job.yaml
model-admission/model_admission/: __init__.py  __main__.py  cli.py  ledger.py  policy.py  report.py  taxonomy.py  timestamps.py
model-admission/tests/: conftest.py  test_catalog_taxonomy_alignment.py  test_cli.py  test_cli_exit_logic.py  test_cli_extra.py  test_driver_faults.py  test_drivers.py  test_integration_drivers.py  test_ledger.py  test_llm_security_catalog.py  test_policy.py  test_report.py  test_taxonomy.py
(+60 files in other folders)
