[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hf-bundle-scanner"
version = "0.1.0"
description = "HF repo snapshot manifest, discovery, bundle scan orchestration over model-admission."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = [
    "huggingface_hub>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4.0",
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
]
mcp = ["mcp>=1.2.0"]
http = ["fastapi>=0.115.0", "uvicorn[standard]>=0.30.0"]

[project.scripts]
scan-bundle = "hf_bundle_scanner.cli:main"
hf-bundle-mcp = "hf_bundle_scanner.mcp_server:main"
hf-bundle-http = "hf_bundle_scanner.http_job:run_uvicorn"

[tool.setuptools.packages.find]
where = ["."]
include = ["hf_bundle_scanner*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: network or full stack",
    "chwoo: downloads ~561MiB from HF (chwoo collection sample repo)",
]

[tool.ruff]
line-length = 100
target-version = "py311"
